--- a/project/makefile
+++ b/project/makefile
@@ -3,11 +3,8 @@ CFLAGS = -O2
 %.o: %.cpp 
 	g++ -c -o $@ $< $(CFLAGS)
 
-christofides: christofides.o helper.o opt2.o
-	g++ -o christofides christofides.o helper.o opt2.o
-
-main: main.o helper.o greedy.o opt2.o
-	g++ -o main main.o helper.o greedy.o opt2.o
+main: main.o helper.o greedy.o opt2.o christofides.o
+	g++ -o main main.o helper.o greedy.o opt2.o christofides.o
 
 clean:
 	rm *.o main
