finish tsp project

--- a/project/makefile
+++ b/project/makefile
@@ -1,10 +1,10 @@
-CFLAGS = -O2
+CFLAGS = -O2 -std=gnu++17 -g -static
 
 %.o: %.cpp 
 	g++ -c -o $@ $< $(CFLAGS)
 
-main: main.o helper.o greedy.o opt2.o christofides.o
-	g++ -o main main.o helper.o greedy.o opt2.o christofides.o
+main: main.o helper.o greedy.o opt2.o
+	g++ -o main main.o helper.o greedy.o opt2.o
 
 clean:
 	rm *.o main
